--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 APScheduler==3.6.3
+boto==2.49.0
+botocore==1.20.97
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
@@ -16,6 +18,7 @@ httplib2==0.19.1
 idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jmespath==0.10.0
 MarkupSafe==2.0.1
 oauth2client==4.1.3
 oauthlib==3.1.1
@@ -24,12 +27,14 @@ protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
+python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-telegram-bot==13.6
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+s3transfer==0.4.2
 six==1.16.0
 tornado==6.1
 tzlocal==2.1
