--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
+coloredlogs==15.0.1
 Flask==2.0.1
 google-api-core==1.30.0
 google-api-python-client==2.9.0
@@ -16,6 +17,7 @@ google-auth-oauthlib==0.4.4
 googleapis-common-protos==1.53.0
 gunicorn==20.1.0
 httplib2==0.19.1
+humanfriendly==9.2
 idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -28,6 +30,7 @@ protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
+pyreadline==2.1
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-telegram-bot==13.6
